173: redirect cookie is set and removed with /authorization